--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -31,8 +31,7 @@
         </form>
 
         <p class="text-center mt-3">
-            Don't have an account? <a href="{% url 'register' %}">Register here</a>.
-        </p>
+            Don't have an account? Contact the admin team</p>
 
         <p class="text-center mt-3">
             Forgot your password? Please contact the admin team for assistance.
